media/emby/emby.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emby
  namespace: emby
  labels:
    app: emby
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: emby
  template:
    metadata:
      labels:
        app: emby
        media-app: authorized
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: emby
        image: emby/embyserver:4.10.0.17
        ports:
          - name: http
            containerPort: 8096
        volumeMounts:
          - name: emby-config
            mountPath: /config
          - name: emby-tvshows
            mountPath: /tvshow
          - name: emby-movies
            mountPath: /movie
        resources:
          requests:
            cpu: 200m
            memory: 512Mi
          limits:
            cpu: 1000m
            memory: 1Gi
      volumes:
        - name: emby-config
          persistentVolumeClaim:
            claimName: emby-pvc
        - name: emby-tvshows
          persistentVolumeClaim:
            claimName: emby-tvshows-pvc
        - name: emby-movies
          persistentVolumeClaim:
            claimName: emby-movies-pvc
