media/emby/emby-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: emby-ingressroute
  namespace: emby
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`emby.ltc.tsphotoclicks.net`)
      services:
        - name: emby
          port: 8096
  tls:
    secretName: emby-internal-secret
---
apiVersion: v1
kind: Service
metadata:
  name: emby
  namespace: emby
spec:
  selector:
    app: emby
  ports:
    - port: 8096
      targetPort: 8096
